--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1.title {
   width: 180px;
   height: 35px;
   line-height: 35px;
-  bottom: 2px solid black;
+  border: 2px solid black;
   color: rebeccapurple;
   display: block;
   margin: 25px auto 0;
@@ -54,6 +54,7 @@ h1.title {
 .logo a {
   font-family: "Allura";
   font-size: 32px;
+  font-weight: bold;
   color: red;
 }
 
@@ -133,4 +134,26 @@ h1.title {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.about,
+.services,
+.contactus,
+.ourteam {
+  text-align: center;
+  padding: 5% 10%;
+}
+
+.services {
+  background: whitesmoke;
+}
+
+.diff_services {
+  margin-top: 35px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.diff_services .diff_services_item {
+  width: 30%;
 }
