--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1.title {
   color: orange;
   font-family: "Allura", cursive;
   text-transform: uppercase;
-  font-size: 38px;
+  font-size: 25px;
   word-spacing: 25px;
   letter-spacing: 5px;
 }
@@ -53,7 +53,7 @@ h1.title {
 
 .logo a {
   font-family: "Allura";
-  font-size: 32px;
+  font-size: 60px;
   font-weight: bold;
   color: red;
 }
@@ -156,4 +156,36 @@ h1.title {
 
 .diff_services .diff_services_item {
   width: 30%;
+}
+
+.diff_services .diff_services_item img {
+  width: 100%;
+  margin-bottom: 25px;
+}
+
+.diff_services .diff_services_item h3 {
+  color: tomato;
+  margin-bottom: 15px;
+}
+
+.form_wrapper .form_input {
+  margin-bottom: 15px;
+}
+
+.form_wrapper .form_input textarea {
+  width: 250px;
+  padding: 12px 20px;
+  height: 80px;
+  resize: none;
+  border: 1px solid lightcyan;
+}
+
+.form_wrapper .form_input input[type="text"] {
+  width: 250px;
+  padding: 12px 20px;
+  border: 4px solid lightgreen;
+}
+
+.form_wrapper .form_input input[type="text"]:hover {
+  transform: scale(1.1);
 }
