Our team styling

--- a/style.css
+++ b/style.css
@@ -188,3 +188,32 @@ h1.title {
 .ourteam {
   background: whitesmoke;
 }
+
+.ourteam_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.ourteam_wrapper .team {
+  display: flex;
+  justify-content: space-between;
+}
+
+.ourteam_wrapper .team_members {
+  width: 30%;
+  height: auto;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+}
+
+.ourteam_wrapper .team_members img {
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: all 0.5s ease;
+}
+
+.ourteam_wrapper .team_members img:hover {
+  transform: scaleY(1.05);
+}
